--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-UNIT_DELETE_SECRET_KEY=null
-SECRET_KEY=your-secret-fuckin-key
-UPLOAD_FOLDER=Uploads
-NEWS_API_KEY=140695dbcf9a4c90aceec0b5d3b1155b
-TELEGRAM_BOT_TOKEN=7643200755:AAEnY79hQQ98ovHCmOp-IOcscwvDGqUbEMM
-TELEGRAM_CHAT_ID=6214817938
+UNIT_DELETE_SECRET_KEY=
+SECRET_KEY=
+UPLOAD_FOLDER=
+NEWS_API_KEY=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
