--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Flask==3.0.3
-Werkzeug==3.0.4
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 itsdangerous==2.2.0
@@ -10,13 +9,12 @@ psycopg2-binary==2.9.9
 gunicorn==23.0.0
 flask-socketio==5.3.6
 pandas==2.2.2
-python-docx==1.1.2
-requests==2.31.0
-python-dotenv==1.0.1
-PyPDF2==3.0.1
-eventlet==0.33.3
+numpy==1.26.4
+bcrypt==4.0.1
+python-dotenv==1.0.0
 apscheduler==3.10.4
-bcrypt==4.1.2
-bleach==6.1.0
+bleach==6.0.0
 Flask-WTF==1.2.1
 Flask-Limiter==3.5.0
+eventlet==0.33.3
+cython==3.0.10
